sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:17: error: value =< is not a member of Int
    while(fin!=true || i=<1){
                        ^